* v1.8.Beta (Rebi & Azan)                                                              *
****************************************************************************************

Current working revision.


- v1.8.3d -
-----------

(a) December 27th, 2004.
(b) January  11th, 2005.
(c) January  15th, 2005.
(d) January  20th, 2005.

New Features:
(a) Added new analysis routine
    'analyze cell_gpb <Manning parameter> <outer cell radius> <inner cell radius> [<accuracy> [<# of interations>]]'
    for determining the numerical solution of the Poisson-Boltzmann equation in the cell model.
(c) added a generic P3M test case.

Changes:
(c) removed the buggy, non-interpolating version of the P3M charge assignment.
(c) some improvements in the P3M charge assignment.

Bugfixes:
(b) Fixed a bug which crashed analyze energy and pressure if the bonded interactions had noncontigous numbers.
(b) exclusions now also work without Verlet lists.
(c) Fixed the square bug in P3M, which occurs for non-neutral systems.
(c) Fixed a rare event bug in tunev2 which could result in wrong parameter sets.
(d) P3M now honours changes to the skin
(d) Fixed the additional checks in P3M to contain the skin

- v1.8.2i -
-----------

(i) December 23rd, 2004.
(h) December 21st, 2004.
(g) December 14th, 2004.
(f) December 10th, 2004.
(e) December  9th, 2004.
(d) December  6th, 2004.
(c) December  2nd, 2004.
(b) December  1st, 2004.
(a) November 30th, 2004.

New Features:
(i) Added new optional option 'angle <angle>' to the polymer command, allowing to create
    polymers within the freely-rotating chain model.
(e) Added a new 'writepdbtopo' which uses the new 'analyze get_folded_positions'-function 
    to write a pdb file using folded molecule information.
(e) Added a new 'analyze' command 'get_folded_positions' which allows the user to get 
    folded particle positions out to the tcl level.  The most important flag to this 